--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   </head>
-  <body>
+  <body style="height: 100%">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app" style="position: relative"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
